# terragpu

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-02-09-terragpu-v1-design.md  2026-02-24-scaffolding-and-core-engine.md
terragpu/: __init__.py  context.py  rasterstack.py
terragpu/indices/: __init__.py
terragpu/io/: __init__.py
terragpu/ml/: __init__.py
terragpu/ops/: __init__.py
terragpu/stac/: __init__.py
tests/: test_api.py  test_context.py  test_rasterstack.py
