[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terragpu"
version = "0.1.0"
description = "GPU-accelerated geospatial raster processing for remote sensing scientists"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jaya Venkatesh" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "xarray>=2024.1.0",
    "dask[complete]>=2024.1.0",
    "rasterio>=1.3",
    "pystac-client>=0.7",
    "stackstac>=0.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=13.0",
    "dask-cuda>=24.4",
]
ml = [
    "cuml-cu12>=24.4",
    "cudf-cu12>=24.4",
]
torch = [
    "torch>=2.0",
    "torchgeo>=0.6",
]
viz = [
    "datashader>=0.16",
    "holoviews>=1.18",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
